--- a/gecco-admin/pom.xml
+++ b/gecco-admin/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>gecco-admin</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>gecco-admin</name>
-    <description>Demo project for Spring Boot</description>
+    <description>Gecco-后台管理</description>
 
     <properties>
         <java.version>1.8</java.version>
